[gd_scene load_steps=3 format=3 uid="uid://qw146u0esirf"]

[ext_resource type="Script" path="res://scripts/default_gun.gd" id="1_bpw0c"]
[ext_resource type="Texture2D" uid="uid://rn52b3ekoi8p" path="res://assets/point_light_texture.webp" id="2_gngk3"]

[node name="Default Gun" type="Node2D"]
script = ExtResource("1_bpw0c")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="ShotLight" type="PointLight2D" parent="."]
enabled = false
color = Color(0.929412, 0.321569, 0.0470588, 1)
energy = 0.7
texture = ExtResource("2_gngk3")

[node name="ShotLightTimer" type="Timer" parent="ShotLight"]
wait_time = 0.05

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="ShotLight/ShotLightTimer" to="." method="_on_shot_light_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
